acid/k8s/kafka/kafka-ui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-ui
  labels:
    app: kafka
    component: kafka-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka
      component: kafka-ui
  template:
    metadata:
      labels:
        app: kafka
        component: kafka-ui
    spec:
      containers:
        - name: kafka-ui
          image: provectuslabs/kafka-ui
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "512Mi"
              cpu: "200m"
            limits:
              memory: "1Gi"
              cpu: "1"
