acid/k8s/kafka/zookeeper-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zookeeper
  labels:
    app: kafka
    component: zookeeper
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka
      component: zookeeper
  template:
    metadata:
      labels:
        app: kafka
        component: zookeeper
    spec:
      containers:
        - name: zookeeper
          image: bitnami/zookeeper:3.8
          ports:
            - containerPort: 2181
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"
