acid/k8s/kafka/kafka-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka
  labels:
    app: kafka
    component: broker
spec:
  ports:
    - port: 9092
      targetPort: 9092
  selector:
    app: kafka
    component: broker
  type: ClusterIP
