acid/k8s/kafka/kafka-ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka-ui
  labels:
    app: kafka
    component: kafka-ui
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: kafka
    component: kafka-ui
  type: ClusterIP
