acid/k8s/kafka/zookeeper-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zookeeper
  labels:
    app: kafka
    component: zookeeper
spec:
  ports:
    - port: 2181
      targetPort: 2181
  selector:
    app: kafka
    component: zookeeper
  type: ClusterIP
